test/fail/basic_syntax/bad_list_close_token.lly
#[
SyntaxError: Expected closing token ']', not ')'.
Where: File "bad_list_close_token.lly" at line 6
]#

var lsi: list[integer] = [10, 20, 30)
